# polaris-activation-auth-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_activation_auth_api/: app.py  config.py
dhos_activation_auth_api/blueprint_api/: __init__.py  audit.py  controller.py  scopes.py
dhos_activation_auth_api/blueprint_development/: __init__.py  controller.py
dhos_activation_auth_api/helpers/: cli.py  utils.py
dhos_activation_auth_api/models/: api_spec.py  clinician.py  device.py  device_activation.py  group.py  patient.py  patient_activation.py  product.py
dhos_activation_auth_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: activation_auth_api_client.py  rabbitmq_client.py  storage_client.py
integration-tests/features/: clinician.feature  device_activation.feature  patient_activation.feature
integration-tests/helpers/: security.py
integration-tests/steps/: clinician_steps.py  common_steps.py  device_steps.py  rabbitmq_steps.py  request_steps.py  response_steps.py  storage_steps.py
migrations/versions/: 0484755f6866_.py  0f1c8ecf6351_.py  1f916524d61c_.py  261fd1ed1d70_.py  28e2cb33ddf1_.py  39e1eea5842d_.py  3e15f4bba5a8_.py  569b95c34f29_.py  6b865cef2dff_.py  6c96252c3ebb_.py  80154c6d2d2a_drop_tinyurl_suffix.py  82e4ae6c4644_.py  (+7 more)
tests/: conftest.py  test_activate_device.py  test_audit.py  test_clincian_model.py  test_clinician_jwt.py  test_create_clinician.py  test_create_device.py  test_create_device_activation.py  test_get_device_by_uuid.py  test_get_device_jwt.py  test_get_devices.py  test_openapi.py  test_patient_activation.py  test_scopes.py  test_update_device.py  test_utils.py
